# GDShare

./: .gdmake  .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  changelog.md  dllmain.cpp  main.cpp  mod.json  run.bat  runner.cpp
.github/workflows/: build.yml
include/: GDShare.hpp
src/: GDSM.cpp  GDSM.hpp  GDShare.cpp  console.cpp  console.hpp  gdshare.cpp  gdshare.hpp  main.cpp  mod.cpp  mod.hpp  offsets.hpp
src/ext/: json.hpp  miniz.h
src/gd/: ButtonSprite.hpp  CCMenuItemToggler.hpp  CCScrollLayerExt.hpp  CCTextInputNode.hpp  CustomListView.hpp  FLAlertLayer.hpp  GJDropDownLayer.hpp  GJGameLevel.hpp  GJListLayer.hpp  GameLevelManager.hpp
src/layers/: EditLevelLayer.cpp  EditLevelLayer.hpp  ExportSettingsLayer.cpp  ExportSettingsLayer.hpp  GJSearchObject.hpp  LevelBrowserLayer.cpp  LevelBrowserLayer.hpp  LevelInfoLayer.cpp  LevelInfoLayer.hpp
src/nodes/: BGCheckbox.cpp  BGCheckbox.hpp  BrownAlertDelegate.cpp  BrownAlertDelegate.hpp  HorizontalSelectMenu.cpp  HorizontalSelectMenu.hpp  InputNode.cpp  InputNode.hpp
src/utils/: gdshare.cpp  gdshare.hpp  helpers.hpp
